layout issue resolved, next move: click through to full page image

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -37,10 +37,8 @@ li:last-child {
 }
 
 img {
-  margin: .25%;
-  max-height: 15%;
-  min-width: 15%;
-  z-index: 4;
+  max-height: 100%;
+  min-width: 100%;
   object-fit: cover;
   vertical-align: bottom;
 }
@@ -65,7 +63,7 @@ img {
   height: 100%;
   width: 10%;
   position: fixed;
-  z-index: 7;
+  z-index: 5;
   top: 10;
   left: 0;
   /* background-color: grey; */
